cart.html added and header added

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>InstaDelivery</title>
-
 </head>
+
 <body>
+    <div class="topnav">
+            <h2>InstaDelivery</h2>
+            <a class="active" href="index.html">Home</a>
+            <a href="cart.html">Shop</a>
+    </div>
     <div class="login-container">
         <h1 class="login-header">InstaDelivery</h1>
         <div class="select-user login-container">
@@ -19,6 +24,12 @@
         </div>
     </div>
     
+    <footer>
+        <p>Copyright &copy; 2020 InstaDelivery</p>
+        <a href="https://facebook.com"><i class="fab fa-facebook-square fa-2x"></i></a>
+        <a href="https://instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="https://youtube.com"><i class="fab fa-youtube-square fa-2x"></i></a>
+    </footer>
 </body>
 
 </html>
