--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <h2>InstaDelivery</h2>
             <a class="active" href="index.html">Home</a>
             <a href="cart.html">Shop</a>
+            <a href="orders.html">Orders</a>
+            <a href="payment.html">Payment</a>
+            <a href="assignments.html">Assignments</a>
     </div>
     <div class="login-container">
         <h1 class="login-header">InstaDelivery</h1>
