--- a/index.html
+++ b/index.html
@@ -9,14 +9,23 @@
 </head>
 
 <body>
-    <div class="topnav">
+    <!--<div>
             <h2>InstaDelivery</h2>
             <a class="active" href="index.html">Home</a>
             <a href="cart.html">Shop</a>
             <a href="orders.html">Orders</a>
             <a href="payment.html">Payment</a>
             <a href="assignments.html">Assignments</a>
-    </div>
+    </div>-->
+
+    <ul class="topnav">
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="cart.html">Shop</a></li>
+        <li><a href="orders.html">Orders</a></li>
+        <li><a href="payment.html">Payment</a></li>
+        <li><a href="assignments.html">Assignments</a></li>
+    </ul>
+
     <div class="login-container">
         <h1 class="login-header">InstaDelivery</h1>
         <div class="select-user login-container">
