working on navbar and giving each page content

--- a/cart.html
+++ b/cart.html
@@ -10,11 +10,13 @@
 
 <body>
     <!-- Nav Menu-->
-    <div class="topnav">
-            <h2>InstaDelivery</h2>
-            <a href="index.html">Home</a>
-            <a class="active" href="cart.html">Shop</a>
-    </div>
+    <ul class="topnav">
+            <li><a class="active header-logo" href="index.html">InstaDelivery</a></li>
+            <li><a href="cart.html">Shop</a></li>
+            <li><a href="orders.html">My orders</a></li>
+            <li><a href="payment.html">My payment</a></li>
+            <li><a href="assignments.html">Deliverer assignments</a></li>
+    </ul>
 
     <!-- New Releases -->
     <section id="boxes_1">
