--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
     <ul class="topnav">
-        <li><a class="active" href="index.html">Home</a></li>
+        <li><a class="active header-logo" href="index.html">InstaDelivery</a></li>
         <li><a href="cart.html">Shop</a></li>
-        <li><a href="orders.html">Orders</a></li>
-        <li><a href="payment.html">Payment</a></li>
-        <li><a href="assignments.html">Assignments</a></li>
+        <li><a href="orders.html">My orders</a></li>
+        <li><a href="payment.html">My payment</a></li>
+        <li><a href="assignments.html">Deliverer assignments</a></li>
     </ul>
 
     <div class="login-container">
