--- a/orders.html
+++ b/orders.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <title>InstaDelivery</title>
+</head>
+
+<body>
+    <ul class="topnav">
+        <li><a class="active header-logo" href="index.html">InstaDelivery</a></li>
+        <li><a href="cart.html">Shop</a></li>
+        <li><a href="orders.html">My orders</a></li>
+        <li><a href="payment.html">My payment</a></li>
+        <li><a href="assignments.html">Deliverer assignments</a></li>
+    </ul>
+
+    <div class="content-container">
+        <h1>Orders</h1>
+        <p>Will show customers their orders</p>
+        <p>Customers can add/remove an order</p>
+        <p>Customers can check the status of their order</p>
+    </div>
+    
+    <footer>
+        <p>Copyright &copy; 2020 InstaDelivery</p>
+        <a href="https://facebook.com"><i class="fab fa-facebook-square fa-2x"></i></a>
+        <a href="https://instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="https://youtube.com"><i class="fab fa-youtube-square fa-2x"></i></a>
+    </footer>
+</body>
+
+</html>
+
 
