adding descriptions to each page

--- a/cart.html
+++ b/cart.html
@@ -18,7 +18,22 @@
             <li><a href="assignments.html">Deliverer assignments</a></li>
     </ul>
 
+    <div class="content-container">
+            
+            <h1>Cart</h1>
+            <p>Users can add/remove items from their cart</p>
+            <p>Users can search for items based off of name or price</p>
+            <p>Users can select the quantity they want</p>
+
+            <!-- Search Bar -->
+            <div class="search">
+                    <input type="text" placeholder="Search..">
+                    <button>Go</button>
+            </div>
+        
+
     <!-- New Releases -->
+    <h1>Results</h1>
     <section id="boxes_1">
         <div class="containers">
             <div class="box">
@@ -102,14 +117,13 @@
             <strong class="cart-total-title">Total</strong>
             <span class="cart-total-price">$0</span>
         </div>
-        <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
+        <button class="btn btn-primary btn-purchase" type="button">Place Order</button>
     </section>
+
+</div>
 
     <footer>
         <p>Copyright &copy; 2020 InstaDelivery</p>
-        <a href="https://facebook.com"><i class="fab fa-facebook-square fa-2x"></i></a>
-        <a href="https://instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
-        <a href="https://youtube.com"><i class="fab fa-youtube-square fa-2x"></i></a>
     </footer>
 
 
