changed log in process and added a sign in page with description

--- a/cart.html
+++ b/cart.html
@@ -122,9 +122,9 @@
 
 </div>
 
-    <footer>
-        <p>Copyright &copy; 2020 InstaDelivery</p>
-    </footer>
+<footer class="footer">
+    <p>Copyright &copy; 2020 InstaDelivery</p>
+</footer>
 
 
     <script src="../js/script.js"></script>
