--- a/signup.html
+++ b/signup.html
@@ -17,15 +17,11 @@
         <li><a href="assignments.html">Deliverer assignments</a></li>
     </ul>
 
-    <div class="login-container">
-        <h1 class="login-header">InstaDelivery</h1>
-        <div class="select-user login-container">
-            <h2>Login</h2>
-            <input class="user-login-input" type="text" placeholder="email">
-            <input class="user-login-input" type="text" placeholder="password">
-            <button class="login-button">Log in</button>
-            <a class="new-user" href="signup.html">New User</a>
-        </div>
+    <div class="content-container">
+        <h1>Sign Up</h1>
+        <p>User selects if they are a customer or delivery driver</p>
+        <p>User can enter in first name, last name, email, and password</p>
+        <p>User will then be added to the system and can log in</p>
     </div>
     
     <footer class="footer">
@@ -34,3 +30,5 @@
 </body>
 
 </html>
+
+
