--- a/payment.html
+++ b/payment.html
@@ -23,11 +23,8 @@
         <p>Users can edit/change this information</p>
     </div>
     
-    <footer>
+    <footer class="footer">
         <p>Copyright &copy; 2020 InstaDelivery</p>
-        <a href="https://facebook.com"><i class="fab fa-facebook-square fa-2x"></i></a>
-        <a href="https://instagram.com"><i class="fab fa-instagram fa-2x"></i></a>
-        <a href="https://youtube.com"><i class="fab fa-youtube-square fa-2x"></i></a>
     </footer>
 </body>
 
