Added input fields and buttons

--- a/assignments.html
+++ b/assignments.html
@@ -14,13 +14,30 @@
         <li><a href="cart.html">Shop</a></li>
         <li><a href="orders.html">My orders</a></li>
         <li><a href="payment.html">My payment</a></li>
-        <li><a href="assignments.html">Deliverer assignments</a></li>
+        <li><a class="current" href="assignments.html">Deliverer assignments</a></li>
     </ul>
     
     <div class="content-container">
         <h1>Deliverer assignments</h1>
         <p>Will show which orders deliverers are assigned to</p>
         <p>Deliverers can "complete" an order</p>
+    </div>
+
+    <div class="search">
+        <input type="text" placeholder="Search..">
+        <button>Go</button>
+    </div>
+
+    <div class="assginments">
+        <div class="specific-assign">
+            <p>Order 345</p>
+            <p>1 Apples</p>
+            <p>3 Bananas</p>
+            <p>6 Grapes</p>
+            <p>Assigned To: Chris Jenkins</p>
+            <button>Complete Order</button>
+            <hr>
+        </div>
     </div>
 
     <footer class="footer">
