--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <ul class="topnav">
-        <li><a class="active header-logo" href="index.html">InstaDelivery</a></li>
+        <li><a class="active header-logo current" href="index.html">InstaDelivery</a></li>
         <li><a href="cart.html">Shop</a></li>
         <li><a href="orders.html">My orders</a></li>
         <li><a href="payment.html">My payment</a></li>
@@ -19,10 +19,13 @@
 
     <div class="login-container">
         <h1 class="login-header">InstaDelivery</h1>
+        <p>InstaDelivery is an online delivery service attached to a grocery store to help customers and the 
+            store safely make purchases and deliver goods during the age of COVID-19
+        </p>
         <div class="select-user login-container">
             <h2>Login</h2>
-            <input class="user-login-input" type="text" placeholder="email">
-            <input class="user-login-input" type="text" placeholder="password">
+            <input class="user-login-input" type="text" placeholder="Email">
+            <input class="user-login-input" type="text" placeholder="Password">
             <button class="login-button">Log in</button>
             <a class="new-user" href="signup.html">New User</a>
         </div>
