--- a/orders.html
+++ b/orders.html
@@ -12,7 +12,7 @@
     <ul class="topnav">
         <li><a class="active header-logo" href="index.html">InstaDelivery</a></li>
         <li><a href="cart.html">Shop</a></li>
-        <li><a href="orders.html">My orders</a></li>
+        <li><a class="current" href="orders.html">My orders</a></li>
         <li><a href="payment.html">My payment</a></li>
         <li><a href="assignments.html">Deliverer assignments</a></li>
     </ul>
@@ -22,6 +22,20 @@
         <p>Will show customers their orders</p>
         <p>Customers can add/remove an order</p>
         <p>Customers can check the status of their order</p>
+    </div>
+
+    <div class="orders">
+        <div class="specific-order">
+            <p>Order 345</p>
+            <p>1 Apples</p>
+            <p>3 Bananas</p>
+            <p>6 Grapes</p>
+            <p>Deliverer: Chris Jenkins</p>
+            <p>Status: Delivered</p>
+            <button>Edit Order</button>
+            <button>Delete Order</button>
+            <hr>
+        </div>
     </div>
     
     <footer class="footer">
