--- a/signup.html
+++ b/signup.html
@@ -23,6 +23,16 @@
         <p>User can enter in first name, last name, email, and password</p>
         <p>User will then be added to the system and can log in</p>
     </div>
+
+    <form action="" class="payment-form">
+        <input type="text" id="fname" name="fname" placeholder="First Name"><br>
+        <input type="text" id="lname" name="lname" placeholder="Last Name"><br>
+        <input type="text" id="email" name="email" placeholder="Email"><br>
+        <input type="password" id="psswrd" name="psswrd" placeholder="Password"><br>
+        <input type="checkbox" id="deliverer" name="deliverer" value="Deliverer">
+        <label for="deliverer"> Do you want to be a Deliverer?</label><br>
+        <input type="submit" value="Sign Up">
+    </form>
     
     <footer class="footer">
         <p>Copyright &copy; 2020 InstaDelivery</p>
