Added more styling and dummy data

--- a/signup.html
+++ b/signup.html
@@ -24,14 +24,15 @@
         <p>User will then be added to the system and can log in</p>
     </div>
 
-    <form action="" class="payment-form">
+    <form action="" class="signup-form">
+        <h2 class="">Sign Up</h2>
         <input type="text" id="fname" name="fname" placeholder="First Name"><br>
         <input type="text" id="lname" name="lname" placeholder="Last Name"><br>
         <input type="text" id="email" name="email" placeholder="Email"><br>
-        <input type="password" id="psswrd" name="psswrd" placeholder="Password"><br>
+        <input type="password" id="psswrd" name="psswrd" placeholder="Password"><br><br>
         <input type="checkbox" id="deliverer" name="deliverer" value="Deliverer">
-        <label for="deliverer"> Do you want to be a Deliverer?</label><br>
-        <input type="submit" value="Sign Up">
+        <label for="deliverer"> Do you want to be a Deliverer?</label><br><br>
+        <input type="submit" id="sign-up-button" value="Sign Up">
     </form>
     
     <footer class="footer">
