--- a/assignments.html
+++ b/assignments.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>InstaDelivery</title>
 </head>
 
@@ -21,14 +22,14 @@
         <h1>Deliverer assignments</h1>
         <p>Will show which orders deliverers are assigned to</p>
         <p>Deliverers can "complete" an order</p>
+        <div class="search">
+            <input type="text" placeholder="Search..">
+            <button>Go</button>
+        </div>
     </div>
 
-    <div class="search">
-        <input type="text" placeholder="Search..">
-        <button>Go</button>
-    </div>
 
-    <div class="assginments">
+    <!-- <div class="assginments">
         <div class="specific-assign">
             <p>Order 345</p>
             <p>1 Apples</p>
@@ -38,7 +39,20 @@
             <button>Complete Order</button>
             <hr>
         </div>
-    </div>
+    </div> -->
+
+
+    <div class="card" style="margin-top: 20px;">
+        <h5 class="card-header">Order 345</h5>
+        <div class="card-body">
+          <p>1 Apples</p>
+          <p>3 Bananas</p>
+          <p>6 Grapes</p>
+          <p>Assigned To: Chris Jenkins</p>
+          <button class="btn btn-primary">Complete Order</button>
+          <button class="btn btn-danger">Delete</button>
+        </div>
+      </div>
 
     <footer class="footer">
         <p>Copyright &copy; 2020 InstaDelivery</p>
