removed log in feature

--- a/assignments.html
+++ b/assignments.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>InstaDelivery</title>
 </head>
 
@@ -17,15 +18,14 @@
         <li><a href="payment.html">My payment</a></li>
         <li><a class="current" href="assignments.html">Deliverer assignments</a></li>
     </ul>
-    
+
     <div class="content-container">
-        <h1>Deliverer assignments</h1>
-        <p>Will show which orders deliverers are assigned to</p>
-        <p>Deliverers can "complete" an order</p>
+        <h1>Deliverer Assignments</h1>
         <div class="search">
             <input type="text" placeholder="Search..">
-            <button>Go</button>
+            <button class="btn btn-success">Go</button>
         </div>
+        <button style="margin: 10px" class="btn btn-primary">Assign an Order</button>
     </div>
 
 
@@ -45,14 +45,14 @@
     <div class="card" style="margin-top: 20px;">
         <h5 class="card-header">Order 345</h5>
         <div class="card-body">
-          <p>1 Apples</p>
-          <p>3 Bananas</p>
-          <p>6 Grapes</p>
-          <p>Assigned To: Chris Jenkins</p>
-          <button class="btn btn-primary">Complete Order</button>
-          <button class="btn btn-danger">Delete</button>
+            <p>1 Apples</p>
+            <p>3 Bananas</p>
+            <p>6 Grapes</p>
+            <p>Assigned To: Chris Jenkins</p>
+            <button class="btn btn-primary">Complete Order</button>
+            <button class="btn btn-danger">Delete</button>
         </div>
-      </div>
+    </div>
 
     <footer class="footer">
         <p>Copyright &copy; 2020 InstaDelivery</p>
@@ -60,4 +60,3 @@
 </body>
 
 </html>
-
