--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <title>InstaDelivery</title>
 </head>
 
@@ -17,9 +19,25 @@
         <li><a href="assignments.html">Deliverer assignments</a></li>
     </ul>
 
+    <div class="home-page">
+        <div class="content-container">
+            <h1 class="login-header">InstaDelivery</h1>
+            <p style="padding-top: 20px">InstaDelivery is an online delivery service attached to a grocery store to
+                help customers and the
+                store safely make purchases and deliver goods during the age of COVID-19.
+            </p>
+            <p style="padding-top: 20px">Shop - Add, update, delete products to/from an order. Place an order.</p>
+            <p>Orders - Update/Delete an order.</p>
+            <p>Payment - Add a payment, update/delete a payment.</p>
+            <p>Deliverer - Assign/Remove orders to a deliverer.</p>
+        </div>
+    </div>
+
+    <!-- OLD LOGIN STUFF: NOT USING -->
+    <!-- 
     <div class="login-container">
         <h1 class="login-header">InstaDelivery</h1>
-        <p>InstaDelivery is an online delivery service attached to a grocery store to help customers and the 
+        <p>InstaDelivery is an online delivery service attached to a grocery store to help customers and the
             store safely make purchases and deliver goods during the age of COVID-19
         </p>
         <div class="select-user login-container">
@@ -30,7 +48,8 @@
             <a class="new-user" href="signup.html">New User</a>
         </div>
     </div>
-    
+    -->
+
     <footer class="footer">
         <p>Copyright &copy; 2020 InstaDelivery</p>
     </footer>
