--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <ul class="topnav">
         <li><a class="active header-logo current" href="index.html">InstaDelivery</a></li>
         <li><a href="cart.html">Shop</a></li>
-        <li><a href="orders.html">My orders</a></li>
-        <li><a href="payment.html">My payment</a></li>
-        <li><a href="assignments.html">Deliverer assignments</a></li>
+        <li><a href="orders.html">Orders</a></li>
+        <li><a href="payment.html">Payments</a></li>
+        <li><a href="assignments.html">Deliverer Assignments</a></li>
+        <li><a href="signup.html">Sign Up</a></li>
     </ul>
 
     <div class="home-page">
@@ -30,6 +31,7 @@
             <p>Orders - Update/Delete an order.</p>
             <p>Payment - Add a payment, update/delete a payment.</p>
             <p>Deliverer - Assign/Remove orders to a deliverer.</p>
+            <p>Sign Up - Assign/Remove/Update customers and deliverers</p>
         </div>
     </div>
 
