--- a/payment.html
+++ b/payment.html
@@ -18,9 +18,10 @@
   <ul class="topnav">
     <li><a class="active header-logo" href="index.html">InstaDelivery</a></li>
     <li><a href="cart.html">Shop</a></li>
-    <li><a href="orders.html">My orders</a></li>
-    <li><a class="current" href="payment.html">My payment</a></li>
-    <li><a href="assignments.html">Deliverer assignments</a></li>
+    <li><a href="orders.html">Orders</a></li>
+    <li><a class="current" href="payment.html">Payments</a></li>
+    <li><a href="assignments.html">Deliverer Assignments</a></li>
+    <li><a href="signup.html">Sign Up</a></li>
   </ul>
 
   <div class="content-container">
