added fetch request

--- a/assignments.html
+++ b/assignments.html
@@ -42,22 +42,25 @@
         </div>
     </div> -->
 
-
-    <div class="card" style="margin-top: 20px;">
-        <h5 class="card-header">Order 345</h5>
-        <div class="card-body">
-            <p>1 Apples</p>
-            <p>3 Bananas</p>
-            <p>6 Grapes</p>
-            <p>Assigned To: Chris Jenkins</p>
-            <button class="btn btn-primary">Complete Order</button>
-            <button class="btn btn-danger">Delete</button>
+    <div id="all-orders">
+        <div class="card" style="margin-top: 20px;">
+            <h5 class="card-header">Order 345</h5>
+            <div class="card-body">
+                <p>1 Apples</p>
+                <p>3 Bananas</p>
+                <p>6 Grapes</p>
+                <p>Assigned To: Chris Jenkins</p>
+                <button class="btn btn-primary">Complete Order</button>
+                <button class="btn btn-danger">Delete</button>
+            </div>
         </div>
     </div>
+    
 
     <footer class="footer">
         <p>Copyright &copy; 2020 InstaDelivery</p>
     </footer>
+    <script src="js/assignments.js"></script>
 </body>
 
 </html>
