--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <title>InstaDelivery</title>
 </head>
 
@@ -35,10 +41,114 @@
         <label for="deliverer"> Do you want to be a Deliverer?</label><br><br>
         <input type="submit" id="sign-up-button" value="Sign Up">
     </form>
+
+    <h3 style="text-align: center; margin-top: 20px;" >Customers</h3>
+    <table
+      class="table"
+      style="
+        margin-top: 20px;
+        margin-bottom: 30px;
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+      "
+    >
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">First Name</th>
+          <th scope="col">Last Name</th>
+          <th scope="col">Email</th>
+          <th scope="col">Password</th>
+          <th scope="col">Address</th>
+        </tr>
+      </thead>
+      <tbody id="customer-data">
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>Thornton</td>
+          <td>@fat</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Larry</td>
+          <td>the Bird</td>
+          <td>@twitter</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+        </tr>
+        <tr>
+          <th scope="row">4</th>
+          <td>Larry</td>
+          <td>the Bird</td>
+          <td>@twitter</td>
+          <td>Otto</td>
+          <td>@mdo</td>
+        </tr>
+      </tbody>
+    </table>
+    
+
+
+    <h3 style="text-align: center; margin-top: 20px;" >Deliverers</h3>
+    <table
+      class="table"
+      style="
+        margin-top: 20px;
+        margin-bottom: 30px;
+        width: 70%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+      "
+    >
+      <thead class="thead-dark">
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">First Name</th>
+          <th scope="col">Last Name</th>
+        </tr>
+      </thead>
+      <tbody id="deliverer-data">
+        <tr>
+          <th scope="row">1</th>
+          <td>Mark</td>
+          <td>Otto</td>
+        </tr>
+        <tr>
+          <th scope="row">2</th>
+          <td>Jacob</td>
+          <td>Thornton</td>
+        </tr>
+        <tr>
+          <th scope="row">3</th>
+          <td>Larry</td>
+          <td>the Bird</td>
+        </tr>
+        <tr>
+          <th scope="row">4</th>
+          <td>Larry</td>
+          <td>the Bird</td>
+        </tr>
+      </tbody>
+    </table>
     
     <footer class="footer">
         <p>Copyright &copy; 2020 InstaDelivery</p>
     </footer>
+    <script src="js/signup.js"></script>
 </body>
 
 </html>
