--- a/cart.html
+++ b/cart.html
@@ -40,43 +40,43 @@
         <!-- New Releases -->
         <!-- <h1>Results</h1> -->
         <section id="boxes_1">
-            <div class="containers">
-                <div class="box">
-                    <h3 class="shop-title" name="leggings">Apples</h3>
-                    <span class="price">$30.00</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua.</p>
-                    <button class="btn btn-info shop-button">Add To Cart</button>
-                </div>
-                <div class="box">
-                    <h3 class="shop-title">Banana</h3>
-                    <span class="price">$20.00</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua.</p>
-                    <button class="btn btn-info shop-button">Add To Cart</button>
-                </div>
-                <div class="box">
-                    <h3 class="shop-title">Bread</h3>
-                    <span class="price">$25.00</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua.</p>
-                    <button class="btn btn-info shop-button">Add To Cart</button>
-                </div>
-                <div class="box">
-                    <h3 class="shop-title">Chicken</h3>
-                    <span class="price">$18.50</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua.</p>
-                    <button class="btn btn-info shop-button">Add To Cart</button>
-                </div>
+            <div class="containers"></div>
+            <div class="box">
+                <h3 class="shop-title" name="leggings">Apples</h3>
+                <span class="price">$30.00</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore
+                    et dolore magna aliqua.</p>
+                <button class="btn btn-info shop-button">Add To Cart</button>
             </div>
-        </section>
+            <div class="box">
+                <h3 class="shop-title">Banana</h3>
+                <span class="price">$20.00</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore
+                    et dolore magna aliqua.</p>
+                <button class="btn btn-info shop-button">Add To Cart</button>
+            </div>
+            <div class="box">
+                <h3 class="shop-title">Bread</h3>
+                <span class="price">$25.00</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore
+                    et dolore magna aliqua.</p>
+                <button class="btn btn-info shop-button">Add To Cart</button>
+            </div>
+            <div class="box">
+                <h3 class="shop-title">Chicken</h3>
+                <span class="price">$18.50</span>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore
+                    et dolore magna aliqua.</p>
+                <button class="btn btn-info shop-button">Add To Cart</button>
+            </div>
+    </div>
+    </section>
 
-        <!-- Best Sellers -->
+    <!-- Best Sellers 
         <section id="boxes_2">
             <div class="containers">
                 <div class="box_2">
@@ -113,27 +113,29 @@
                 </div>
             </div>
         </section>
+        -->
 
 
 
-        <!-- CART -->
-        <section class="container content-section">
-            <h2 class="section-header">CART</h2>
-            <div class="cart-row">
-                <span class="cart-item cart-header cart-column"></span>
-                <span class="cart-price cart-header cart-column"></span>
-                <span class="cart-quantity cart-header cart-column"></span>
-            </div>
-            <div class="cart-items">
-            </div>
-            <div class="cart-total">
-                <strong class="cart-total-title">Total</strong>
-                <span class="cart-total-price">$0</span>
-            </div>
-            <button class="btn btn-primary btn-purchase" type="button">Place Order</button>
-        </section>
+    <!-- CART -->
+    <section class="container content-section">
+        <h2 class="section-header">CART</h2>
+        <div class="cart-row">
+            <span class="cart-item cart-header cart-column"></span>
+            <span class="cart-price cart-header cart-column"></span>
+            <span class="cart-quantity cart-header cart-column"></span>
+        </div>
+        <div class="cart-items">
+        </div>
+        <div class="cart-total">
+            <strong class="cart-total-title">Total</strong>
+            <span class="cart-total-price">$0</span>
+        </div>
+        <button class="btn btn-primary btn-purchase" type="button">Place Order</button>
+    </section>
 
     </div>
+    <script src="js/products.js"></script>
 
     <footer class="footer">
         <p>Copyright &copy; 2020 InstaDelivery</p>
