--- a/cart.html
+++ b/cart.html
@@ -17,8 +17,8 @@
         <li><a class="current" href="cart.html">Shop</a></li>
         <li><a href="orders.html">Orders</a></li>
         <li><a href="payment.html">Payments</a></li>
-        <li><a href="assignments.html">Deliverer Assignments</a></li>
-        <li><a href="signup.html">Sign Up</a></li>
+        <li><a href="assignments.html">Manage Deliverers</a></li>
+        <li><a href="signup.html">Manage Customers</a></li>
     </ul>
 
     <div class="content-container">
@@ -32,88 +32,16 @@
         </div>
 
         <br>
-        <button class="btn btn-primary">Add Product</button>
+        <button onclick="location.href = 'addProduct.html';" class="btn btn-primary">Add Product</button>
         <button class="btn btn-primary">Update Product</button>
         <button class="btn btn-danger">Delete Product</button>
 
-
-        <!-- New Releases -->
-        <!-- <h1>Results</h1> -->
+        <!-- Product list -->
         <section id="boxes_1">
             <div class="containers"></div>
-            <div class="box">
-                <h3 class="shop-title" name="leggings">Apples</h3>
-                <span class="price">$30.00</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                    labore
-                    et dolore magna aliqua.</p>
-                <button class="btn btn-info shop-button">Add To Cart</button>
-            </div>
-            <div class="box">
-                <h3 class="shop-title">Banana</h3>
-                <span class="price">$20.00</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                    labore
-                    et dolore magna aliqua.</p>
-                <button class="btn btn-info shop-button">Add To Cart</button>
-            </div>
-            <div class="box">
-                <h3 class="shop-title">Bread</h3>
-                <span class="price">$25.00</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                    labore
-                    et dolore magna aliqua.</p>
-                <button class="btn btn-info shop-button">Add To Cart</button>
-            </div>
-            <div class="box">
-                <h3 class="shop-title">Chicken</h3>
-                <span class="price">$18.50</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                    labore
-                    et dolore magna aliqua.</p>
-                <button class="btn btn-info shop-button">Add To Cart</button>
-            </div>
+            <!-- Content -->
     </div>
     </section>
-
-    <!-- Best Sellers 
-        <section id="boxes_2">
-            <div class="containers">
-                <div class="box_2">
-                    <h3 class="shop-title">Avocado</h3>
-                    <span class="price">$35.00</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua.</p>
-                    <button class="btn btn-info shop-button">Add To Cart</button>
-                </div>
-                <div class="box_2">
-                    <h3 class="shop-title">Lettuce</h3>
-                    <span class="price">$15.00</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua.</p>
-                    <button class="btn btn-info shop-button">Add To Cart</button>
-                </div>
-                <div class="box_2">
-                    <h3 class="shop-title">Grapes</h3>
-                    <span class="price">$10.00</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua.</p>
-                    <button class="btn btn-info shop-button">Add To Cart</button>
-                </div>
-                <div class="box_2">
-                    <h3 class="shop-title">Eggs</h3>
-                    <span class="price">$40.00</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore
-                        et dolore magna aliqua.</p>
-                    <button class="btn btn-info shop-button">Add To Cart</button>
-                </div>
-            </div>
-        </section>
-        -->
 
 
 
@@ -135,13 +63,13 @@
     </section>
 
     </div>
-    <script src="js/products.js"></script>
+
 
     <footer class="footer">
         <p>Copyright &copy; 2020 InstaDelivery</p>
     </footer>
 
-
+    <script src="js/products.js"></script>
     <script src="js/cart.js"></script>
     <script src="https://kit.fontawesome.com/e0d7e7d4bc.js" crossorigin="anonymous"></script>
 </body>
