--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <li><a href="cart.html">Shop</a></li>
         <li><a href="orders.html">Orders</a></li>
         <li><a href="payment.html">Payments</a></li>
-        <li><a href="assignments.html">Deliverer Assignments</a></li>
-        <li><a href="signup.html">Sign Up</a></li>
+        <li><a href="assignments.html">Manage Deliverers</a></li>
+        <li><a href="signup.html">Manage Customers</a></li>
     </ul>
 
     <div class="home-page">
