--- a/signup.html
+++ b/signup.html
@@ -2,155 +2,101 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <title>InstaDelivery</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <title>InstaDelivery</title>
 </head>
 
 <body>
-    <ul class="topnav">
-        <li><a class="active header-logo" href="index.html">InstaDelivery</a></li>
-        <li><a href="cart.html">Shop</a></li>
-        <li><a href="orders.html">Orders</a></li>
-        <li><a href="payment.html">Payments</a></li>
-        <li><a href="assignments.html">Deliverer Assignments</a></li>
-        <li><a class="current" href="signup.html">Sign Up</a></li>
-    </ul>
+  <ul class="topnav">
+    <li><a class="active header-logo" href="index.html">InstaDelivery</a></li>
+    <li><a href="cart.html">Shop</a></li>
+    <li><a href="orders.html">Orders</a></li>
+    <li><a href="payment.html">Payments</a></li>
+    <li><a href="assignments.html">Manage Deliverers</a></li>
+    <li><a class="current" href="signup.html">Manage Customer</a></li>
+  </ul>
 
-    <div class="content-container">
-        <h1>Sign Up</h1>
-        <p>User selects if they are a customer or delivery driver</p>
-        <p>User can enter in first name, last name, email, and password</p>
-        <p>User will then be added to the system and can log in</p>
-    </div>
+  <div class="content-container">
+    <h1>Sign Up</h1>
+    <p>User selects if they are a customer or delivery driver</p>
+    <p>User can enter in first name, last name, email, and password</p>
+    <p>User will then be added to the system and can log in</p>
+  </div>
 
-    <form action="" class="signup-form">
-        <h2 class="">Sign Up</h2>
-        <input type="text" id="fname" name="fname" placeholder="First Name"><br>
-        <input type="text" id="lname" name="lname" placeholder="Last Name"><br>
-        <input type="text" id="email" name="email" placeholder="Email"><br>
-        <input type="password" id="psswrd" name="psswrd" placeholder="Password"><br><br>
-        <input type="checkbox" id="deliverer" name="deliverer" value="Deliverer">
-        <label for="deliverer"> Do you want to be a Deliverer?</label><br><br>
-        <input type="submit" id="sign-up-button" value="Sign Up">
-    </form>
+  <form action="" class="signup-form" id="my-form" method="post">
+    <h2 class="">Register User</h2>
+    <input type="text" id="fname" name="fname" placeholder="First Name"><br>
+    <input type="text" id="lname" name="lname" placeholder="Last Name"><br>
+    <input type="text" id="address" name="address" placeholder="Home Address"><br>
+    <input type="text" id="email" name="email" placeholder="Email"><br>
+    <input type="password" id="psswrd" name="psswrd" placeholder="Password"><br><br>
+    <input type="submit" id="sign-up-button" value="Add User">
+  </form>
 
-    <h3 style="text-align: center; margin-top: 20px;" >Customers</h3>
-    <table
-      class="table"
-      style="
+  <h3 style="text-align: center; margin-top: 20px;">Customers</h3>
+  <table class="table" style="
         margin-top: 20px;
         margin-bottom: 30px;
         width: 70%;
         margin-left: auto;
         margin-right: auto;
         text-align: center;
-      "
-    >
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">First Name</th>
-          <th scope="col">Last Name</th>
-          <th scope="col">Email</th>
-          <th scope="col">Password</th>
-          <th scope="col">Address</th>
-        </tr>
-      </thead>
-      <tbody id="customer-data">
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>Larry</td>
-          <td>the Bird</td>
-          <td>@twitter</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-        <tr>
-          <th scope="row">4</th>
-          <td>Larry</td>
-          <td>the Bird</td>
-          <td>@twitter</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-        </tr>
-      </tbody>
-    </table>
-    
+      ">
+    <thead class="thead-dark">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">First Name</th>
+        <th scope="col">Last Name</th>
+        <th scope="col">Email</th>
+        <th scope="col">Password</th>
+        <th scope="col">Address</th>
+        <th scope="col">Update</th>
+      </tr>
+    </thead>
+    <tbody id="customer-data">
+      <tr>
+        <th scope="row">1</th>
+        <td>Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">2</th>
+        <td>Jacob</td>
+        <td>Thornton</td>
+        <td>@fat</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">3</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <th scope="row">4</th>
+        <td>Larry</td>
+        <td>the Bird</td>
+        <td>@twitter</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+    </tbody>
+  </table>
 
-
-    <h3 style="text-align: center; margin-top: 20px;" >Deliverers</h3>
-    <table
-      class="table"
-      style="
-        margin-top: 20px;
-        margin-bottom: 30px;
-        width: 70%;
-        margin-left: auto;
-        margin-right: auto;
-        text-align: center;
-      "
-    >
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">First Name</th>
-          <th scope="col">Last Name</th>
-        </tr>
-      </thead>
-      <tbody id="deliverer-data">
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>Larry</td>
-          <td>the Bird</td>
-        </tr>
-        <tr>
-          <th scope="row">4</th>
-          <td>Larry</td>
-          <td>the Bird</td>
-        </tr>
-      </tbody>
-    </table>
-    
-    <footer class="footer">
-        <p>Copyright &copy; 2020 InstaDelivery</p>
-    </footer>
-    <script src="js/signup.js"></script>
+  <footer class="footer">
+    <p>Copyright &copy; 2020 InstaDelivery</p>
+  </footer>
+  <script src="js/signup.js"></script>
 </body>
 
 </html>
-
-
